added pdf creation

--- a/.gitignore
+++ b/.gitignore
@@ -129,11 +129,6 @@ dmypy.json
 .pyre/
 
 token.txt
-good.json
-bad1.json
-bad2.json
-bad3.json
-bad4.json
-data.csv
-model.sav
+data/*
 ids
+stats/*
