--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pickle
-sklearn
-os
-pandas
-json
-urrlib
+pandas==1.2.5
+matplotlib==3.4.2
+Pillow==8.3.1
+reportlab==3.5.68
+scikit_learn==0.24.2
+seaborn==0.11.1
