--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+pycaret==2.3.3
 pandas==1.2.5
-matplotlib==3.4.2
-Pillow==8.3.1
-reportlab==3.5.68
-scikit_learn==0.24.2
 seaborn==0.11.1
+matplotlib==3.4.2
+gradio==2.2.8
+Pillow==8.3.1
+reportlab==3.6.1
+scikit_learn==0.24.2
